--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "pretty-ms": "^7.0.1"
   },
   "devDependencies": {
-    "@types/node": "^16.4.13"
+    "@types/node": "^16.4.13",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "typescript": "^4.3.5"
   }
 }
