--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npx tsc"
   },
-  "author": "AviDoesDev",
+  "author": "JAGUARAVI",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "chalk": "^4.1.2",
-    "discord.js": "^13.1.0",
+    "discord.js": "^13.2.0",
     "moment": "^2.29.1",
     "pretty-ms": "^7.0.1"
   },
