--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "postinstall": "npx tsc"
   },
   "author": "JAGUARAVI",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JAGUARAVI/JagCmdHandler.git"
+  },
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "chalk": "^4.1.2",
