--- a/package.json
+++ b/package.json
@@ -13,42 +13,11 @@
     "type": "git",
     "url": "git+https://github.com/JAGUARAVI/JagCmdHandler.git"
   },
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es2021": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 12
-    },
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "indent": [
-        "error",
-        "tab"
-      ],
-      "linebreak-style": "off",
-      "quotes": [
-        "error",
-        "single"
-      ],
-      "semi": [
-        "error",
-        "always"
-      ]
-    }
-  },
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "chalk": "^4.1.2",
-    "discord.js": "^13.6.0",
+    "discord-api-types": "^0.27.3",
+    "discord.js": "^14.0.0-dev.1646654941.b162f27",
     "moment": "^2.29.1",
     "pretty-ms": "^7.0.1"
   },
