--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jag-cmd-handler",
-  "version": "0.0.3-lts",
-  "description": "An advanced djs 13 command handler.",
+  "version": "1.0.0",
+  "description": "An advanced djs 14 command handler.",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
