--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "lint": "eslint ./src --ext .ts"
+    "lint": "eslint ./src --ext .ts",
+    "docsgen": "typedoc --plugin typedoc-plugin-markdown --out docs src/"
   },
   "author": "JAGUARAVI",
   "repository": {
@@ -25,6 +26,8 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
+    "typedoc": "^0.22.13",
+    "typedoc-plugin-markdown": "^3.11.14",
     "typescript": "^4.3.5"
   }
 }
